# Webflow-Automation-001

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini 
app/: __init__.py  main.py
app/api/: auth.py  automation.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/data/: pages.json.example
app/models/: schemas.py
app/services/: audit.py  csv_handler.py  dw_wf_pg_data.py  push_2_wf.py  storage.py
app/static/css/: main.css
app/templates/: automation.html  base.html  login.html
app/templates/partials/: audit_table.html
deployments/: Dockerfile  docker-compose.yml
dev-core-scripts/: selected_pages_meta.csv
